# gaming-buch-club

./: .pre-commit-config.yaml  README.md
.github/workflows/: build-and-deploy-auth-proxy.yml  build-and-deploy-backend.yml  build-and-deploy-frontend.yml  deploy-infrastructure.yml  deploy.yml
auth-proxy/: Dockerfile  README.md  go.mod  go.sum  main.go  make.sh
auth-proxy/deployment/tasks/: main.yml
auth-proxy/deployment/templates/: deployment.yml  service.yml  traefik-middleware.yml
backend/: .gitignore  Dockerfile  README.md  make.sh  pyproject.toml
backend/api/: endpoints.py  websocket.py
backend/blog/: models.py  test_blog.py
backend/blog/migrations/: 0001_initial.py
backend/deployment/tasks/: main.yml
backend/deployment/templates/: deployment.yml  ingress.yml  persistent-volumes.yml  secrets.yml  service.yml
backend/docker_database_url/: __init__.py
backend/project/: asgi.py  settings.py  urls.py
deployment/: README.md  ansible.cfg  ci_ssh_key  hcloud_token_production  inventory.hcloud.yml  inventory.ini  make.sh  playbook.yml  requirements.txt  rotate_vault_password.py
deployment/group_vars/: all.yml  production.yml
deployment/roles/hetzner-server/: requirements.yml
frontend/: README.md  make.sh  package-lock.json  package.json  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts
frontend/deployment/tasks/: main.yml
frontend/deployment/templates/: deployment.yml  ingress.yml  service.yml
frontend/src/: App.vue  main.ts
frontend/src/components/: CookieBanner.vue  NavBar.vue
frontend/src/views/: HomeView.vue
(+30 files in other folders)
